# lain

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .rspec  .rubocop.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEBUGGING_NVIM.md  DEBUGGING_OLLAMA.md  Gemfile  LICENSE.txt  README.md  ROADMAP.md  Rakefile  TODO.md  deny.toml  lain.gemspec
.github/workflows/: main.yml
crates/lain-core/: Cargo.toml
crates/lain-core/src/: exec.rs  main.rs  rpc.rs
crates/lain-core/tests/: lifecycle.rs
docs/: agent-state-machine.md  concurrency.md  ollama.md  porting-providers.md
exe/: lain
ext/lain/: CLAUDE.md  Cargo.toml  extconf.rb
ext/lain/src/: astgrep.rs  bm25.rs  canonical.rs  dag.rs  digest.rs  event.rs  lib.rs  treesitter.rs  turn.rs
lib/: lain.rb
lib/lain/: agent.rb  approval.rb  arm.rb  bench.rb  cache_profile.rb  canonical.rb  capability.rb  channel.rb  cli.rb  compaction.rb  compare.rb  consolidation.rb  content_addressed.rb  context.rb  core.rb  effect.rb  embedder.rb  error.rb  event.rb  freezable.rb  friction.rb  frontend.rb  gherkin.rb  grader.rb  guard.rb  handler.rb  improvement.rb  isolation.rb  journal.rb  ledger.rb  memory.rb  middleware.rb  notify.rb  oracle.rb  paths.rb  plan.rb  price_book.rb  promise.rb  prompt.rb  provider.rb  (+21 more)
lib/lain/agent/: accounting.rb  budget.rb  loop_machine.rb  model_caller.rb  request_override.rb  tool_runner.rb  transition_listener.rb
lib/lain/approval/: auto_surface.rb  policy_switch.rb  queue.rb
lib/lain/arm/: adaptive_router.rb  driver.rb  dual_ledger.rb  ledger_state.rb  orchestrator_worker.rb  single_thread.rb  synthesis.rb
lib/lain/bench/: arm_sweep.rb  arm_tasks.rb  cli.rb  decider_sweep.rb  disclosure_sweep.rb  dry_replay.rb  live_replay.rb  plan_sweep.rb  rewrites.rb  session.rb  speculative.rb  sweep.rb  variance.rb  variance_fixtures.rb
lib/lain/capability/: degraded_set.rb  guard.rb  policy.rb
lib/lain/channel/: drop_oldest.rb
lib/lain/cli/: backend.rb  chat_launch.rb  chronicle.rb  command.rb  conductor.rb  consolidate.rb  fleet_windows.rb  fork_point.rb  friction.rb  goal_driver.rb  human_replies.rb  improve.rb  improvements.rb  inspection_binding.rb  journal_tee.rb  live_views.rb  prompt_breaker.rb  repl.rb  repl_middleware.rb  resend_bridge.rb  resume.rb  sessions.rb  shutdown.rb  signals.rb  switchboard.rb  tmux_surface.rb  up.rb  watch.rb  wiring.rb
lib/lain/compaction/: cold.rb  need.rb  prepared.rb  scheduler.rb
lib/lain/compare/: table.rb
lib/lain/context/: base.rb  cache_breakpoints.rb  compact.rb  dedupe_tool_calls.rb  mailbox.rb  message_envelope.rb  model_switch.rb  protected_patterns.rb  prune.rb  purge_failed_inputs.rb  recall.rb  reminder.rb  static_model.rb  tail_injection.rb
lib/lain/core/: child.rb  client.rb
lib/lain/effect/: handler.rb
lib/lain/embedder/: ollama.rb  static.rb
lib/lain/event/: chain_writer.rb  payload.rb  projection.rb
lib/lain/friction/: report.rb
lib/lain/frontend/: approval_policy.rb  decorators.rb  neovim.rb  tty.rb
lib/lain/gherkin/: approval.rb  test_generation.rb
lib/lain/grader/: fixture.rb  frustration_repair.rb  journaling.rb  recall.rb  refuter.rb  rubric.rb  test_harness.rb  tool_call_index.rb  tool_steering.rb  verified.rb
lib/lain/handler/: approving.rb  live.rb  mock.rb  recorded.rb
planning/: README.md  crdt-exploration.md  dominator-meet-research-2026-07.md  first-class-concepts.md  hn-agent-landscape-2026-07.md  hn-harness-overhead-2026-07.md  interface-integration.md  orchestration-experiments.md  remaining-work.md  research-scan-2026-07.md  rpc_direction_probe.rb
planning/reviews/: 2026-07-14-joel-code-review.patch  2026-07-14-sweep-findings.md  2026-07-15-rust-preliminary-analysis.md  rubocop-config-report.md
planning/specs/: bedrock-provider.md  cache-aware-compaction.md  cache-economics.md  chunk-cache-memory-hands.md  chunk-fixes-xdg-resume-signals.md  chunk-gherkin-meta-agents-plan-compaction.md  chunk-meet-supervision-fanout-interface.md  chunk-parallel-tools-core-skeleton.md  chunk-skills-roles-tools.md  chunk-spine-agents-sweep-nvim.md  code-review-ollama-test-infra.md  event-schema.md  grader-from-gherkin.md  graders.md  memory-read-path.md  oracles.md  orchestration-model.md  plan-shaped-compaction.md  prompt-slots.md  rust-findings-resolution.md  structural-code-search.md  timeline.md
plugin/nvim/: README.md
plugin/tmux/: README.md  lain.tmux
references/: INDEX.md  SCOPE.md  hn-agent-landscape-2026-07.md  memory-and-retrieval.md  oss-inspiration.md  prompt-caching-mechanics.md  sources.md
references/ollama/: INDEX.md  api-chat.md  openai-compat.md  rubyllm-ollama.md
spec/: bootsnap_setup.rb  lain_spec.rb  network_posture_spec.rb  output_discipline_spec.rb  spec_helper.rb  support_matchers_spec.rb
spec/lain/: actor_spec.rb  agent_cancellation_spec.rb  agent_spec.rb  agent_state_machine_diagram_spec.rb  agent_state_machine_spec.rb  agent_turn_middleware_spec.rb  approval_spec.rb  arm_spec.rb  cache_profile_spec.rb  canonical_spec.rb  channel_spec.rb  cli_spec.rb  compare_spec.rb  consolidation_spec.rb  content_addressed_spec.rb  context_spec.rb  effect_spec.rb  event_spec.rb  friction_spec.rb  gherkin_spec.rb  handler_spec.rb  improvement_spec.rb  journal_spec.rb  ledger_spec.rb  middleware_spec.rb  notify_spec.rb  oracle_spec.rb  paths_spec.rb  plan_spec.rb  price_book_spec.rb  promise_spec.rb  provider_spec.rb  repl_delivery_spec.rb  repl_middleware_spec.rb  request_spec.rb  response_spec.rb  role_prelude_wiring_spec.rb  role_spec.rb  session_concurrency_spec.rb  session_record_compaction_spec.rb  (+16 more)
spec/plugin/: nvim_plugin_spec.rb  tmux_plugin_spec.rb
spec/spikes/: async_shellout_flood_spec.rb  async_shellout_spike_spec.rb  effects_fiber_spike_spec.rb
spec/support/: anthropic_sse.rb  command_env.rb  mock_recording.rb  network_access.rb  ollama_tag.rb  ollama_wire.rb  probes.rb  recording_channel.rb  rspec_configuration.rb  shoulda_matchers.rb  super_diff.rb  tags.rb  vcr_configuration.rb  webmock_configuration.rb  with_env.rb  zero_retry.rb
(+557 files in other folders)
