[package]
name = "lain"
version = "0.1.0"
edition = "2024"
authors = ["Joel Johnson <johnson.joel.b@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Used only for `dup(2)` so the tracing subscriber can own an independent copy
# of a caller-supplied fd. Pinned (not `*`) to satisfy `cargo deny`'s wildcard
# ban.
libc = "0.2"
# Canonical's content-addressing hash. The one and only blake3 implementation
# in this project -- Ruby calls into this ext rather than carrying a second,
# separately-vendored copy of the algorithm.
blake3 = "1"
# Persistent HAMT backing the Store's content-addressed map. NOTE: its
# distinguishing feature -- O(1) structural sharing *between map versions* --
# is LATENT today, not yet exploited. The Store mutates one map in place and no
# Timeline retains a prior version, so the current O(1) `fork` and
# stored-once-shared-prefix properties actually come from the handle design
# (`fork` returns self) plus content-addressing (dedup by digest), which a plain
# `HashMap` would also give. The sharing earns its place once speculative
# branching carries a per-branch immutable snapshot so discarded beams never
# touch the shared store (see ROADMAP Rust-rule #2 / the M4 speculative work).
# Chosen over `im`, which has a soundness-advisory history `cargo deny`/`audit` flag.
rpds = "1"
# In-memory BM25 retrieval for Memory::Bm25. Pure data-structure work (an
# inverted index + sparse embeddings over owned `HashMap`s), so it lives
# in-process here rather than in the out-of-process core. `default-features =
# false` drops the crate's `default_tokenizer` (and with it `cached`,
# `stop-words`, `rust-stemmers`, `deunicode`): we supply our own deterministic
# `SurfaceTokenizer`, which keeps the dep tree to `bm25 -> fxhash -> byteorder`
# (all MIT/Apache) and -- load-bearing -- keeps `cached`'s interior mutability
# unreachable so the wrapped index is honestly `frozen_shareable`. Pinned exact
# (not `*`) to satisfy `cargo deny`'s wildcard ban; v2.x is MIT.
bm25 = { version = "=2.3.2", default-features = false }
# Insertion-ordered map used while canonicalizing an object: keys are collected
# in wire order, a second occurrence of a collapsed key is the ambiguous-key
# error, and `sort_keys` then gives the deterministic ordering `Canonical.dump`
# requires. Deterministic iteration is exactly the sorted-key stability the
# prompt cache depends on.
indexmap = "2"
# Idiomatic `std::error::Error` + `Display` derive for the pure error enums
# (CanonError, BuildError). Their Display text is the FFI-visible message a
# later card wires the raise sites to, so hand-rolling `impl Display` for two
# enums is exactly what the derive replaces.
thiserror = "2"
